Add BenchTAOAssocTimeRange