@@ -43,7 +43,8 @@ thputThreads=8
 #benchAssocRange=T
 #benchObjGet=T
 #benchAssocGet=T
-benchAssocCount=T
+#benchAssocCount=T
+benchAssocTimeRange=T
 
 pageCacheForNodes=8543m # works, has tradeoff
 pageCacheIgnoreIndexes=12g
@@ -256,6 +257,21 @@ for JVM_HEAP in 2048; do
            ${HOME_DIR}/neo4j_${DATASET}_assocCount_latency_jvm${JVM_HEAP}m_pagecache${PC}.txt \
            ${warmup_assocCount} \
            ${measure_assocCount} \
+           ${pageCacheIgnoreIndexes}
+      fi
+
+    if [[ -n "$benchAssocTimeRange" ]]; then
+        sleep 2 && sync && sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
+        find data/neo4j/${DATASET}/ -name "*store.db*" -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
+        java -verbose:gc -server -XX:+UseConcMarkSweepGC -Xmx${JVM_HEAP}m -cp ${classpath} \
+           edu.berkeley.cs.succinctgraph.neo4jbench.tao.BenchTAOAssocTimeRange \
+           latency \
+           ${NEO4J_DIR}/${DATASET} \
+           ${QUERY_DIR}/assocTimeRange_warmup.txt \
+           ${QUERY_DIR}/assocTimeRange_query.txt \
+           ${HOME_DIR}/neo4j_${DATASET}_assocTimeRange_latency_jvm${JVM_HEAP}m_pagecache${PC}.txt \
+           ${warmup_assocTimeRange} \
+           ${measure_assocTimeRange} \
            ${pageCacheIgnoreIndexes}
       fi
 
